moodle.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moodle
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: moodle
          image: ghcr.io/cybe-asia/digital-school-moodle:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/moodledata
              name: moodledata
            - mountPath: /var/www/html/config.php
              name: moodle-config
              subPath: config.php
      volumes:
        - name: moodledata
          persistentVolumeClaim:
            claimName: moodle-pvc
        - name: moodle-config
          configMap:
            name: moodle-config
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: moodle
spec:
  selector:
    app: moodle
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
