ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle
  namespace: moodle
spec:
  rules:
    - host: moodle.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle
                port:
                  number: 80
